Clean up test code and some improvements